apps/hass/hass-db/hass-db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hass-db
  namespace: hass
spec:
  serviceName: hass-db
  replicas: 1
  selector:
    matchLabels:
      app: hass-db
  template:
    metadata:
      labels:
        app: hass-db
    spec:
      containers:
      - name: hass-db
        image: mariadb:11.3.2@sha256:33853971b00531e388b348a7ea5c80149c831877b9b9987be2e5b983ac130825
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: hass-db-data
          mountPath: /var/lib/mysql
        command: ["docker-entrypoint.sh"]
        args: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
  volumeClaimTemplates:
  - metadata:
      name: hass-db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 7Gi
      storageClassName: "longhorn"
