apps/hass/hass-db/hass-db-network.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hass-db
  namespace: hass
spec:
  endpointSelector:
    matchLabels:
      app: hass-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: hass
      toPorts:
        - ports:
            - port: "3306"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
